Change the networking.istio.io API version to v1alpha3 as it is more widely available (stackrox/rox#5822)

--- a/image/templates/helm/centralchart/templates/service.yaml
+++ b/image/templates/helm/centralchart/templates/service.yaml
@@ -14,9 +14,9 @@ spec:
     app: central
   type: ClusterIP
 
-{{ if .Capabilities.APIVersions.Has "networking.istio.io/v1beta1/DestinationRule" }}
+{{ if .Capabilities.APIVersions.Has "networking.istio.io/v1alpha3/DestinationRule" }}
 ---
-apiVersion: networking.istio.io/v1beta1
+apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: central-internal-no-istio-mtls
