--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -52,6 +52,7 @@ central:
     generate: null # bool
     htpasswd: null # string
   resources: null # string | dict
+  podPriorityClassName: null # string
   persistence:
     hostPath: null # string
     persistentVolumeClaim:
