central: add ability to specify priority class name

--- a/image/templates/helm/stackrox-central/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-central/internal/config-shape.yaml
@@ -20,6 +20,7 @@ ca:
 additionalCAs: null # string | [string] | dict
 priorityClass:
   enabled: null # bool
+  name: null # string
   value: null # int
   globalDefault: null # bool
   preemptionPolicy: null # string
