--- a/image/templates/helm/stackrox-central/templates/00-priority-class.yaml
+++ b/image/templates/helm/stackrox-central/templates/00-priority-class.yaml
@@ -4,7 +4,7 @@
 apiVersion: scheduling.k8s.io/v1
 kind: PriorityClass
 metadata:
-  name: stackrox-central-priority-class
+  name: {{ default "stackrox-central-priority-class" ._rox.priorityClass.name }}
   labels:
     {{- include "srox.labels" (list . "priorityclass" "stackrox-central-priority-class") | nindent 4 }}
   annotations:
