central: add priority class name default value

--- a/image/templates/helm/stackrox-central/templates/01-central-13-deployment.yaml
+++ b/image/templates/helm/stackrox-central/templates/01-central-13-deployment.yaml
@@ -43,7 +43,7 @@ spec:
         fsGroup: 4000
         runAsUser: 4000
       {{- if ._rox.central.podPriority.enabled }}
-      priorityClassName: {{- ._rox.central.podPriority.className }}
+      priorityClassName: {{- default "stackrox-central-priority-class" ._rox.central.podPriority.className }}
       {{- end }}
       containers:
       - name: central
