secured-cluster: add ability to specify priority class name

--- a/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
@@ -9,6 +9,7 @@ helmManaged: null
 createSecrets: null
 priorityClass:
   enabled: null # bool
+  name: null # string
   value: null # int
   globalDefault: null # bool
   preemptionPolicy: null # string
