--- a/operator/config/crd/bases/platform.stackrox.io_securedclusters.yaml
+++ b/operator/config/crd/bases/platform.stackrox.io_securedclusters.yaml
@@ -389,15 +389,13 @@ spec:
                       collection:
                         default: EBPF
                         description: The method for system-level data collection.
-                          EBPF is recommended. KernelModule is deprecated and will
-                          be removed in the 4.1 release. If you select "NoCollection",
+                          EBPF is recommended. If you select "NoCollection",
                           you will not be able to see any information about network
                           activity and process executions. The remaining settings
                           in these section will not have any effect.
                         enum:
                         - EBPF
                         - CORE_BPF
-                        - KernelModule
                         - NoCollection
                         type: string
                       imageFlavor:
