--- a/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
@@ -622,15 +622,15 @@ spec:
         path: perNode.taintToleration
       - description: The method for system-level data collection. EBPF is recommended.
           If you select "NoCollection", you will not be able to see any information
-          about network activity and process executions. The remaining settings
-          in these section will not have any effect.
+          about network activity and process executions. The remaining settings in
+          these section will not have any effect.
         displayName: Collection
         path: perNode.collector.collection
       - description: The image flavor to use for collector. "Regular" images are bigger
-          in size, but contain kernel modules for most kernels. If you use the "Slim"
-          image flavor, you must ensure that your Central instance is connected to
-          the internet, or regularly receives Collector Support Package updates (for
-          further instructions, please refer to the documentation).
+          in size, but contain kernel modules for most kernels. If you use the "Slim" image
+          flavor, you must ensure that your Central instance is connected to the internet,
+          or regularly receives Collector Support Package updates (for further instructions,
+          please refer to the documentation).
         displayName: Image Flavor
         path: perNode.collector.imageFlavor
       - description: Allows overriding the default resource settings for this component.
