--- a/operator/config/crd/bases/platform.stackrox.io_securedclusters.yaml
+++ b/operator/config/crd/bases/platform.stackrox.io_securedclusters.yaml
@@ -389,10 +389,10 @@ spec:
                       collection:
                         default: EBPF
                         description: The method for system-level data collection.
-                          EBPF is recommended. If you select "NoCollection",
-                          you will not be able to see any information about network
-                          activity and process executions. The remaining settings
-                          in these section will not have any effect.
+                          EBPF is recommended. If you select "NoCollection", you will
+                          not be able to see any information about network activity
+                          and process executions. The remaining settings in these
+                          section will not have any effect.
                         enum:
                         - EBPF
                         - CORE_BPF
@@ -401,11 +401,11 @@ spec:
                       imageFlavor:
                         default: Regular
                         description: The image flavor to use for collector. "Regular"
-                          images are bigger in size, but contain kernel modules for
-                          most kernels. If you use the "Slim" image flavor, you must
-                          ensure that your Central instance is connected to the internet,
-                          or regularly receives Collector Support Package updates
-                          (for further instructions, please refer to the documentation).
+                          images are bigger in size, but contain kernel modules for most kernels.
+                          If you use the "Slim" image flavor, you must ensure that
+                          your Central instance is connected to the internet, or regularly
+                          receives Collector Support Package updates (for further
+                          instructions, please refer to the documentation).
                         enum:
                         - Regular
                         - Slim
