--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -506,8 +506,8 @@ spec:
         path: perNode.collector
       - description: The method for system-level data collection. EBPF is recommended.
           If you select "NoCollection", you will not be able to see any information
-          about network activity and process executions. The remaining
-          settings in these section will not have any effect.
+          about network activity and process executions. The remaining settings in
+          these section will not have any effect.
         displayName: Collection
         path: perNode.collector.collection
       - description: Controls the number of analyzer replicas and autoscaling.
@@ -538,10 +538,10 @@ spec:
         displayName: Annotations
         path: customize.annotations
       - description: The image flavor to use for collector. "Regular" images are bigger
-          in size, but contain kernel modules for most kernels. If you use the "Slim"
-          image flavor, you must ensure that your Central instance is connected to
-          the internet, or regularly receives Collector Support Package updates (for
-          further instructions, please refer to the documentation).
+          in size, but contain kernel modules for most kernels. If you use the "Slim" image
+          flavor, you must ensure that your Central instance is connected to the internet,
+          or regularly receives Collector Support Package updates (for further instructions,
+          please refer to the documentation).
         displayName: Image Flavor
         path: perNode.collector.imageFlavor
       - description: Settings for the Compliance container, which is responsible for
