--- a/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
+++ b/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
@@ -400,7 +400,7 @@ spec:
                       imageFlavor:
                         default: Regular
                         description: The image flavor to use for collector. "Regular"
-                          images are bigger in size, but contain kernel modules for most kernels.
+                          images are bigger in size, but contain probes for most kernels.
                           If you use the "Slim" image flavor, you must ensure that
                           your Central instance is connected to the internet, or regularly
                           receives Collector Support Package updates (for further
