--- a/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
@@ -627,7 +627,7 @@ spec:
         displayName: Collection
         path: perNode.collector.collection
       - description: The image flavor to use for collector. "Regular" images are bigger
-          in size, but contain kernel modules for most kernels. If you use the "Slim" image
+          in size, but contain probes for most kernels. If you use the "Slim" image
           flavor, you must ensure that your Central instance is connected to the internet,
           or regularly receives Collector Support Package updates (for further instructions,
           please refer to the documentation).
