Removed remaining uses of KERNEL_MODULE, except for in zip file

--- a/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
+++ b/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
@@ -232,7 +232,7 @@
 #
 #  # Collection method to use. Can be one of:
 #  #   - EBPF
-#  #   - KERNEL_MODULE
+#  #   - CORE_BPF
 #  #   - NO_COLLECTION
 #  collectionMethod: EBPF
 #
