Changes for central-db multiarch build
Signed-off-by: mdafsanhossain <Mdafsan.Hossain@ibm.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -95,6 +95,11 @@ jobs:
             ui/monorepo.lock
 
   pre-build-cli:
+    strategy:
+      matrix:
+        arch: [ amd64, ppc64le ]
+    env:
+      ARCH: ${{ matrix.arch }}
     runs-on: ubuntu-latest
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.59
