--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,6 +13,47 @@ on:
     - synchronize
 
 jobs:
+  define-job-matrix:
+    outputs:
+      matrix: ${{ steps.define-job-matrix.outputs.matrix }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Define the matrix for build jobs
+        id: define-job-matrix
+        run: |
+          source './scripts/ci/lib.sh'
+
+          matrix='{"pre_build_go_binaries": {"name":[]}, "build_and_push_main": {"name":[]} }'
+
+          # The base matrix
+          matrix="$(jq '.pre_build_go_binaries.name += ["default"]' <<< "$matrix")"
+          matrix="$(jq '.build_and_push_main.name += ["STACKROX_BRANDING", "RHACS_BRANDING"]' <<< "$matrix")"
+
+          # Conditionally add a prerelease build (binaries built with GOTAGS=release)
+          if ! is_tagged; then
+            if ! is_in_PR_context || pr_has_label ci-build-prerelease; then
+              matrix="$(jq '.pre_build_go_binaries.name += ["prerelease"]' <<< "$matrix")"
+              matrix="$(jq '.build_and_push_main.name += ["prerelease"]' <<< "$matrix")"
+            fi
+          fi
+
+          # Conditionally add a -race debug build (binaries built with -race)
+          if ! is_in_PR_context || pr_has_label ci-build-race-condition-debug; then
+            matrix="$(jq '.pre_build_go_binaries.name += ["race-condition-debug"]' <<< "$matrix")"
+            matrix="$(jq '.build_and_push_main.name += ["race-condition-debug"]' <<< "$matrix")"
+          fi
+
+          echo "Job matrix after conditionals:"
+          jq <<< "$matrix"
+
+          condensed="$(jq -c <<< "$matrix")"
+          echo "matrix=$condensed" >> "$GITHUB_OUTPUT"
+
   pre-build-ui:
     strategy:
       matrix:
@@ -84,7 +125,15 @@ jobs:
         with:
           name: cli-build
           path: cli-build.tgz
+
   pre-build-go-binaries:
+    strategy:
+      # Supports three go binary builds:
+      # default - built with environment defaults (see handle-tagged-build & env.mk)
+      # prerelease - built with GOTAGS=release
+      # race-condition-debug - built with -race
+      matrix: ${{ fromJson(needs.define-job-matrix.outputs.matrix).pre_build_go_binaries }}
+    needs: define-job-matrix
     runs-on: ubuntu-latest
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
@@ -108,9 +157,19 @@ jobs:
       - name: PR labels
         uses: joerick/pr-labels-action@v1.0.8
 
-      - name: Setup Go build environment
-        if: contains(github.event.pull_request.labels.*.name, 'ci-release-build')
+      - name: Setup Go build environment for release
+        if: |
+          contains(github.event.pull_request.labels.*.name, 'ci-release-build') 
+            || 
+          matrix.name == 'prerelease'
         run: echo "GOTAGS=release" >> "$GITHUB_ENV"
+
+      - name: Setup Go build environment for -race
+        if: |
+          contains(github.event.pull_request.labels.*.name, 'ci-race-tests')
+            ||
+          matrix.name == 'race-condition-debug'
+        run: echo "RACE=true" >> "$GITHUB_ENV"
 
       - name: Build Go Binaries
         run: make build-prep main-build-nodeps
@@ -120,49 +179,9 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
-          name: go-binaries-build
+          name: go-binaries-build-${{ matrix.name }}
           path: go-binaries-build.tgz
-  pre-build-go-binaries-rcd:
-    runs-on: ubuntu-latest
-    container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
 
-    - name: Ignore dubious repository ownership
-      run: |
-        # Prevent fatal error "detected dubious ownership in repository" from recent git.
-        git config --global --add safe.directory "$(pwd)"
-
-    - name: Cache Go dependencies
-      uses: ./.github/actions/cache-go-dependencies
-
-    - uses: ./.github/actions/handle-tagged-build
-
-    - name: PR labels
-      uses: joerick/pr-labels-action@v1.0.8
-
-    - name: Setup Go build environment
-      run: |
-        if [[ -n "$GITHUB_PR_LABEL_CI_RELEASE_BUILD" ]]; then
-          cci-export GOTAGS release
-        fi
-        echo "GOTAGS: ${GOTAGS:-}"
-
-    - name: Build Go Binaries
-      run: make RACE=true build-prep main-build-nodeps
-
-    - name: Bundle the build to preserve permissions
-      run: tar -cvzf go-binaries-build-rcd.tgz bin/linux_amd64
-
-    - uses: actions/upload-artifact@v3
-      with:
-        name: go-binaries-build-rcd
-        path: go-binaries-build-rcd.tgz
   pre-build-docs:
     runs-on: ubuntu-latest
     container:
@@ -202,15 +221,21 @@ jobs:
   build-and-push-main:
     runs-on: ubuntu-latest
     needs:
+      - define-job-matrix
       - pre-build-ui
       - pre-build-cli
       - pre-build-go-binaries
       - pre-build-docs
     strategy:
-      matrix:
-        branding: [ RHACS_BRANDING, STACKROX_BRANDING ]
+      # Supports four image builds (see Setup build env):
+      # STACKROX_BRANDING
+      # RHACS_BRANDING
+      # prerelease
+      # race-condition-debug
+      matrix: ${{ fromJson(needs.define-job-matrix.outputs.matrix).build_and_push_main }}
     env:
-      ROX_PRODUCT_BRANDING: ${{ matrix.branding }}
+      GO_BINARIES_BUILD_ARTIFACT: ""
+      ROX_PRODUCT_BRANDING: ""
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
       env:
@@ -221,6 +246,36 @@ jobs:
         QUAY_STACKROX_IO_RW_USERNAME: ${{ secrets.QUAY_STACKROX_IO_RW_USERNAME }}
         QUAY_STACKROX_IO_RW_PASSWORD: ${{ secrets.QUAY_STACKROX_IO_RW_PASSWORD }}
     steps:
+
+      - name: Setup build env
+        run: |
+          case "${{ matrix.name }}" in
+            STACKROX_BRANDING)
+              go_binaries="default"
+              brand="STACKROX_BRANDING"
+              ;;
+            RHACS_BRANDING)
+              go_binaries="default"
+              brand="RHACS_BRANDING"
+              ;;
+            race-condition-debug)
+              go_binaries="race-condition-debug"
+              brand="RHACS_BRANDING"
+              ;;
+            prerelease)
+              go_binaries="prerelease"
+              brand="RHACS_BRANDING"
+              ;;
+            *)
+              echo "Unsupported build: ${{ matrix.name }}"
+              exit 1
+          esac
+
+          {
+            echo "GO_BINARIES_BUILD_ARTIFACT=go-binaries-build-${go_binaries}"
+            echo "ROX_PRODUCT_BRANDING=${brand}"
+          } >> "$GITHUB_ENV"
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -240,7 +295,7 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: ui-${{env.ROX_PRODUCT_BRANDING}}-build
+          name: ui-${{ env.ROX_PRODUCT_BRANDING }}-build
           path: ui
 
       - uses: actions/download-artifact@v3
@@ -253,7 +308,7 @@ jobs:
 
       - uses: actions/download-artifact@v3
         with:
-          name: go-binaries-build
+          name: ${{ env.GO_BINARIES_BUILD_ARTIFACT }}
 
       - name: Unpack Go binaries build
         run: |
@@ -275,6 +330,14 @@ jobs:
 
       - name: Generate OSS notice
         run: make ossls-notice
+
+      - name: Set build tag for prerelease images
+        if: matrix.name == 'prerelease'
+        run: echo "BUILD_TAG=$(make --quiet tag)-prerelease" >> "$GITHUB_ENV"
+
+      - name: Set build tag for race condition images
+        if: matrix.name == 'race-condition-debug'
+        run: echo "BUILD_TAG=$(make --quiet tag)-rcd" >> "$GITHUB_ENV"
 
       - name: Build main images
         run: make docker-build-main-image
@@ -323,108 +386,6 @@ jobs:
         run: |
             source ./scripts/ci/lib.sh
             add_build_comment_to_pr
-
-  build-and-push-main-rcd:
-    runs-on: ubuntu-latest
-    needs:
-    - pre-build-ui
-    - pre-build-cli
-    - pre-build-go-binaries-rcd
-    - pre-build-docs
-    strategy:
-      matrix:
-        branding: [ RHACS_BRANDING ]
-    env:
-      ROX_PRODUCT_BRANDING: ${{ matrix.branding }}
-    container:
-      image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-        ref: ${{ github.event.pull_request.head.sha }}
-
-    - name: Ignore dubious repository ownership
-      run: |
-        # Prevent fatal error "detected dubious ownership in repository" from recent git.
-        git config --global --add safe.directory "$(pwd)"
-
-    - name: Checkout submodules
-      run: |
-        git submodule update --init
-
-    - uses: ./.github/actions/handle-tagged-build
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: ui-${{env.ROX_PRODUCT_BRANDING}}-build
-        path: ui
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: cli-build
-
-    - name: Unpack cli build
-      run: |
-        tar xvzf cli-build.tgz
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: go-binaries-build-rcd
-
-    - name: Unpack Go binaries build
-      run: |
-        tar xvzf go-binaries-build-rcd.tgz
-
-    - uses: actions/download-artifact@v3
-      with:
-        name: docs-build
-        path: image/docs
-
-    - uses: ./.github/actions/create-concatenated-ui-monorepo-lock
-
-    # needed to restore node_modules for ossls-nostice
-    - uses: ./.github/actions/cache-ui-dependencies
-
-    # explicitly fetch deps just in case cache was not ready
-    - name: Fetch UI deps
-      run: make -C ui deps
-
-    - name: Generate OSS notice
-      run: make ossls-notice
-
-    - name: Get tag
-      id: tag
-      run: |
-        echo "TAG=$(make --quiet tag)" >> "$GITHUB_OUTPUT"
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build main images
-      run: make docker-build-main-image
-
-    - name: Login to quay.io/rhacs-eng
-      if: |
-        github.event_name == 'push' || !github.event.pull_request.head.repo.fork
-      uses: docker/login-action@v2
-      with:
-        registry: quay.io
-        username: ${{ secrets.QUAY_RHACS_ENG_RW_USERNAME }}
-        password: ${{ secrets.QUAY_RHACS_ENG_RW_PASSWORD }}
-
-    - name: Push to quay.io/rhacs-eng
-      uses: docker/build-push-action@v4
-      if: |
-        github.event_name == 'push' || !github.event.pull_request.head.repo.fork
-      with:
-        push: true
-        context: image/rhel
-        build-args: |
-          ROX_PRODUCT_BRANDING=${{ env.ROX_PRODUCT_BRANDING }}
-        file: image/rhel/Dockerfile.gen
-        tags: quay.io/rhacs-eng/main:${{ steps.tag.outputs.TAG }}-rcd
 
   build-and-push-operator:
     runs-on: ubuntu-latest
@@ -612,10 +573,8 @@ jobs:
       - pre-build-ui
       - pre-build-cli
       - pre-build-go-binaries
-      - pre-build-go-binaries-rcd
       - pre-build-docs
       - build-and-push-main
-      - build-and-push-main-rcd
       - build-and-push-operator
       - build-and-push-mock-grpc-server
       - scan-images-with-roxctl
