update scanner team

--- a/.github/workflows/update_scanner_periodic.yaml
+++ b/.github/workflows/update_scanner_periodic.yaml
@@ -37,7 +37,7 @@ jobs:
           ci-all-qa-tests
           dependencies
         team-reviewers: |
-          scanner-dep-updaters
+          scanner
         draft: false
     - name: Enable Pull Request Automerge
       if: steps.cpr.outputs.pull-request-operation == 'created'
