--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -297,6 +297,12 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Ignore dubious repository ownership
         run: |
           # Prevent fatal error "detected dubious ownership in repository" from recent git.
