--- a/qa-tests-backend/build.gradle
+++ b/qa-tests-backend/build.gradle
@@ -132,7 +132,7 @@ tasks.withType(Test) {
         exceptionFormat "full"
         events "passed", "skipped", "failed"
     }
-    timeout = Duration.ofHours(3).ofMinutes(30)
+    timeout = Duration.ofMinutes(210)
 
     // This ensures that repeated invocations of tests actually run the tests.
     // Otherwise, if the tests pass, Gradle "caches" the result and doesn't actually run the tests,
