Add admission-controller replicas parameter (#5946)

--- a/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/internal/config-shape.yaml
@@ -88,6 +88,7 @@ admissionControl:
     timeout: null # natural number
     enforceOnUpdates: null # bool
   imagePullPolicy: null # string
+  replicas: null # int
   resources: null # string | dict
   serviceTLS:
     cert: null # string
