--- a/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
+++ b/image/templates/helm/stackrox-secured-cluster/templates/admission-controller.yaml
@@ -12,7 +12,7 @@ metadata:
   annotations:
     {{- include "srox.annotations" (list . "deployment" "admission-control") | nindent 4 }}
 spec:
-  replicas: 3
+  replicas: {{ ._rox.admissionControl.replicas }}
   minReadySeconds: 0
   selector:
     matchLabels:
