--- a/operator/config/samples/platform_v1alpha1_central.yaml
+++ b/operator/config/samples/platform_v1alpha1_central.yaml
@@ -4,7 +4,4 @@ metadata:
   name: stackrox-central-services
   namespace: stackrox
 spec:
-  central:
-    exposure:
-      route:
-        enabled: true
+  values: "Test"
