--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -48,6 +48,18 @@ updates:
         update-types: ["version-update:semver-patch"]
 
   - package-ecosystem: 'gomod'
+    directory: '/scanner/'
+    schedule:
+      interval: 'daily'
+    open-pull-requests-limit: 3
+    labels:
+    - "area/scanner"
+    - "auto-merge"
+    - "dependencies"
+    reviewers:
+    - "stackrox/scanner"
+
+  - package-ecosystem: 'gomod'
     directory: '/tools/linters/'
     schedule:
       interval: 'weekly'
