Fix ownership of the current directory in CI
so that git can further work with code cloned by `actions.checkout`
without complaining about dubious ownership:

fatal: detected dubious ownership in repository at '/__w/stackrox/stackrox'

In our case, the default current directory is owned by
uid=1001,gid=123 but the current user is 0:0 (root).

`git` does not like it when the repo directory is owned by a
different user and refuses to work with it until the directory is
marked as safe or the ownership is fixed.

The interesting thing is that `actions.checkout@v3` does by default
mark the directory as safe. `set-safe-directory` is `true` by
default. However, that does not help.
Changing the ownership as done here helps. Therefore,
`set-safe-directory` is redundant and can be set to `false`.

Unfortunately we can't create a reusable action for `chown` in the
repo because the action is not visible before the repo is checked
out, but we need to fix things before checking out.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,9 @@ jobs:
       matrix: ${{ steps.define-job-matrix.outputs.matrix }}
     runs-on: ubuntu-latest
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -64,6 +67,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -94,6 +100,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -128,6 +137,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -172,6 +184,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -255,6 +270,9 @@ jobs:
             echo "GO_BINARIES_BUILD_ARTIFACT=go-binaries-build-${go_binaries}"
             echo "ROX_PRODUCT_BRANDING=${brand}"
           } >> "$GITHUB_ENV"
+
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
 
       - name: Checkout
         uses: actions/checkout@v3
@@ -375,6 +393,9 @@ jobs:
     env:
       ROX_PRODUCT_BRANDING: ${{ matrix.branding }}
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -440,6 +461,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+    - name: Prevent dubious ownership git error
+      run: chown "$(id -u)":"$(id -g)" .
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -496,6 +520,9 @@ jobs:
         STACKROX_CI_INSTANCE_API_KEY: ${{ secrets.STACKROX_CI_INSTANCE_API_KEY }}
         STACKROX_CI_INSTANCE_CENTRAL_HOST: ${{ secrets.STACKROX_CI_INSTANCE_CENTRAL_HOST }}
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
