--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -22,6 +22,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+    - name: Prevent dubious ownership git error
+      run: chown "$(id -u)":"$(id -g)" .
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -44,6 +47,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+    - name: Prevent dubious ownership git error
+      run: chown "$(id -u)":"$(id -g)" .
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
@@ -67,6 +73,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+      - name: Prevent dubious ownership git error
+        run: chown "$(id -u)":"$(id -g)" .
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
@@ -96,6 +105,9 @@ jobs:
     container:
       image: quay.io/stackrox-io/apollo-ci:stackrox-test-0.3.58
     steps:
+    - name: Prevent dubious ownership git error
+      run: chown "$(id -u)":"$(id -g)" .
+
     - name: Checkout
       uses: actions/checkout@v3
       with:
