Lower the mem limit for node-inventory to 500Mi

--- a/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
+++ b/image/templates/helm/stackrox-secured-cluster/values-public.yaml.example
@@ -281,7 +281,7 @@
 #      memory: "10Mi"
 #      cpu: "10m"
 #    limits:
-#      memory: "2Gi"
+#      memory: "500Mi"
 #      cpu: "1"
 #
 #  # Settings for the internal service-to-service TLS certificate used by Collector.
