Makes collection method default to eBPF in operator

--- a/operator/tests/common/secured-cluster-cr.yaml
+++ b/operator/tests/common/secured-cluster-cr.yaml
@@ -20,6 +20,7 @@ spec:
         requests:
           memory: 100Mi
           cpu: 100m
+      collection: KernelModule
     compliance:
       resources:
         requests:
