--- a/.github/workflows/updater-check.yml
+++ b/.github/workflows/updater-check.yml
@@ -12,6 +12,9 @@ jobs:
   test_schedule:
     runs-on: ubuntu-latest
     steps:
+    - uses: pierotofy/set-swap-space@v1.0
+      with:
+        swap-size-gb: 16
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
