--- a/.github/workflows/updater-check.yml
+++ b/.github/workflows/updater-check.yml
@@ -13,11 +13,10 @@ jobs:
   test_schedule:
     runs-on: ubuntu-latest
     steps:
-    - uses: pierotofy/set-swap-space@v1.0
-      with:
-        swap-size-gb: 16
     - uses: actions/checkout@v3
     - uses: actions/setup-go@v4
       with:
         go-version: '>=1.20.0'
     - run: cd scanner && go run cmd/updater/update.go && ls -l --block-size=M tmp
+      env:
+        GOMEMLIMIT: 500MiB
