Rename operator resource to conform with Helm

--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -566,7 +566,7 @@ spec:
       - description: Settings for the Node-Scanner container, which is responsible
           for scanning the Nodes OS filesystem
         displayName: Node Scanner Settings
-        path: perNode.nodescanner
+        path: perNode.nodeScanning
       - displayName: Autoscaling Minimum Replicas
         path: scanner.analyzer.scaling.minReplicas
         x-descriptors:
@@ -662,7 +662,7 @@ spec:
           Please consult the documentation for an overview of default resource requirements
           and a sizing guide.
         displayName: Resources
-        path: perNode.nodescanner.resources
+        path: perNode.nodeScanning.resources
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:resourceRequirements
       - description: Allows overriding the default resource settings for this component.
