Revert "force failures"
This reverts commit c79a50cc3b28d7e1f16a95bacb7534ae8a16fe8f.

--- a/operator/tests/upgrade/upgrade/10-assert-init-bundle.yaml
+++ b/operator/tests/upgrade/upgrade/10-assert-init-bundle.yaml
@@ -8,7 +8,7 @@ metadata:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: collector-tlss
+  name: collector-tls
   annotations:
     init-bundle.stackrox.io/name: testing-cluster
 ---
