--- a/.github/workflows/check-pr-title.yaml
+++ b/.github/workflows/check-pr-title.yaml
@@ -12,5 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Check if the PR title matches the good PR regex
+      env:
+        PR_TITLE: ${{ github.event.pull_request.title }}
       run: |
-        echo "${{ github.event.pull_request.title }}" | grep -E '^(((build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\([\w\-\.]+\))?(!)?)|((ROX-[0-9]+,)*ROX-[0-9]+))(: .*)$'
+        echo "$PR_TITLE" | grep -E '^(((build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\([\w\-\.]+\))?(!)?)|((ROX-[0-9]+,)*ROX-[0-9]+))(: .*)$';
