Make the scanner service headless

--- a/image/templates/helm/shared/templates/02-scanner-07-service.yaml
+++ b/image/templates/helm/shared/templates/02-scanner-07-service.yaml
@@ -12,6 +12,7 @@ metadata:
   annotations:
     {{- include "srox.annotations" (list . "service" "scanner") | nindent 4 }}
 spec:
+  clusterIP: None
   ports:
     - name: https-scanner
       port: 8080
