--- a/operator/tests/common/secured-cluster-cr.yaml
+++ b/operator/tests/common/secured-cluster-cr.yaml
@@ -25,7 +25,7 @@ spec:
         requests:
           memory: 100Mi
           cpu: 100m
-    nodescanner:
+    nodeInventory:
       resources:
         requests:
           memory: 100Mi
