--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -563,10 +563,10 @@ spec:
       - description: Custom environment variables to set on managed pods' containers.
         displayName: Environment Variables
         path: customize.envVars
-      - description: Settings for the Node-Scanner container, which is responsible
-          for scanning the Nodes' filesystem
+      - description: Settings for the Node-Inventory container, which is responsible
+          for scanning the Nodes' filesystem.
         displayName: Node Scanner Settings
-        path: perNode.nodescanner
+        path: perNode.nodeInventory
       - displayName: Autoscaling Minimum Replicas
         path: scanner.analyzer.scaling.minReplicas
         x-descriptors:
@@ -662,7 +662,7 @@ spec:
           Please consult the documentation for an overview of default resource requirements
           and a sizing guide.
         displayName: Resources
-        path: perNode.nodescanner.resources
+        path: perNode.nodeInventory.resources
         x-descriptors:
         - urn:alm:descriptor:com.tectonic.ui:resourceRequirements
       - description: Allows overriding the default resource settings for this component.
