--- a/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
+++ b/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
@@ -521,9 +521,9 @@ spec:
                             type: object
                         type: object
                     type: object
-                  nodescanner:
-                    description: Settings for the Node-Scanner container, which is
-                      responsible for scanning the Nodes' filesystem
+                  nodeInventory:
+                    description: Settings for the Node-Inventory container, which
+                      is responsible for scanning the Nodes' filesystem
                     properties:
                       resources:
                         description: Allows overriding the default resource settings
