--- a/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
+++ b/operator/bundle/manifests/platform.stackrox.io_securedclusters.yaml
@@ -391,7 +391,8 @@ spec:
                           EBPF is recommended. If you select "NoCollection", you will
                           not be able to see any information about network activity
                           and process executions. The remaining settings in these
-                          section will not have any effect.
+                          section will not have any effect. Note that CORE_BPF is
+                          on Tech Preview stage.
                         enum:
                         - EBPF
                         - CORE_BPF
