--- a/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/config/manifests/bases/rhacs-operator.clusterserviceversion.yaml
@@ -507,7 +507,8 @@ spec:
       - description: The method for system-level data collection. EBPF is recommended.
           If you select "NoCollection", you will not be able to see any information
           about network activity and process executions. The remaining settings in
-          these section will not have any effect.
+          these section will not have any effect. Note that CORE_BPF is on Tech Preview
+          stage.
         displayName: Collection
         path: perNode.collector.collection
       - description: Controls the number of analyzer replicas and autoscaling.
