Check in generated

--- a/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
+++ b/operator/bundle/manifests/rhacs-operator.clusterserviceversion.yaml
@@ -616,7 +616,7 @@ spec:
         path: perNode.compliance
       - description: Settings for the Node-Inventory container, which is responsible
           for scanning the Nodes' filesystem
-        displayName: Node-Inventory Settings
+        displayName: Node Scanner Settings
         path: perNode.nodeInventory
       - description: To ensure comprehensive monitoring of your cluster activity,
           Red Hat Advanced Cluster Security will run services on every node in the
